@@ -14,9 +14,12 @@
 #  A copy of the GNU General Public License is available at
 #  http://www.r-project.org/Licenses/
 
-strsplit <- function(x, split, fixed = FALSE, perl = FALSE, useBytes = FALSE)
-    .Internal(strsplit(x, as.character(split), as.logical(fixed),
-                       as.logical(perl), as.logical(useBytes)))
+strsplit <-
+    function(x, split, extended = TRUE, fixed = FALSE, perl = FALSE,
+             useBytes = FALSE)
+    .Internal(strsplit(x, as.character(split), as.logical(extended),
+                       as.logical(fixed), as.logical(perl),
+                       as.logical(useBytes)))
 
 substr <- function(x, start, stop)
 {
